# luanode-tuyaopen

./: .gitignore  .gitmodules  .gitsubmodules  LICENSE  README.md  README_CN.md  README_zh.md
apps/tuya_cloud/switch_demo/: switch_demo.lua
components/elua/: .gitignore
components/elua/doc/: elua.md
components/elua/include/: lapi.h  lauxlib.h  llimits.h  lmem.h  lstate.h  lua.h  luaconf.h  rotable2.h
components/elua/plugin/alien/: Makefile.in  aclocal.m4  alien-0.7.1-1.rockspec  config.h  config.h.in  config.status  configure  libtool
components/elua/plugin/alien/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
components/elua/plugin/alien/src/: alien.c
components/elua/plugin/cffi-lua/src/: ffi.cc  lib.cc  lua.hh  platform.hh  util.cc
components/elua/src/: lapi.c  lauxlib.c  lbaselib.c  ldblib.c  ldo.c  lgc.c  linit.c  liolib.c  lmathlib.c  loadlib.c  loslib.c  lstate.c  lstrlib.c  lstrlib_exts.c  ltablib.c  rotable2.c
components/modules/libffi/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  local.mk
components/modules/libffi/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
components/modules/libffi/doc/: Makefile.in  libffi.info
components/modules/libffi/include/: Makefile.in  ffi.h.in  ffi_common.h
components/modules/libffi/man/: Makefile.in
components/modules/libffi/src/: closures.c  debug.c  dlmalloc.c  prep_cif.c
components/modules/libffi/src/arm/: ffi.c  sysv.S
components/modules/libffi/src/x86/: ffi64.c
components/modules/libffi/testsuite/: Makefile.in
components/modules/lua-cjson/: CMakeLists.txt  fpconv.c  lua_cjson.c  strbuf.c  strbuf.h
components/modules/lua-mbedtls/: CMakeLists.txt
components/modules/lua-mbedtls/doc/: ssl.md
components/modules/lua-mbedtls/src/: common.h  https.lua  ssl.c  tls.lua
components/modules/lua-mqttc/doc/: luamqttc.md
components/modules/lua-mqttc/include/: lua-mqttc.h  luamqttc.h
components/modules/lua-mqttc/src/: lua-mqttc-app.c  lua-mqttc-client.c  luamqttc.c
components/modules/lua-proc/: lpsched.c  lpsched.h  luaproc.c  luaproc.h
components/modules/lua-socket/etc/: get.lua
components/modules/lua-socket/src/: inet.c  inet.h  io.c  io.h  options.c  pierror.h  socket.h  timeout.c  timeout.h  udp.c  usocket.c  usocket.h
components/modules/lua-tuyaopen/include/: crc.h  lua_bsp_config.h  lua_c_api.h  lua_main.h  lua_msgbus.h  lua_timer.h  lua_zbuff.h
components/modules/lua-tuyaopen/src/: crc.c  lua_base.c  lua_c_api.c  lua_conn.c  lua_crypto.c  lua_event.c  lua_gpio.c  lua_kvdb.c  lua_main.c  lua_modbus.c  lua_msgbus.c  lua_ringbuff.c  lua_system.c  lua_timer.c  lua_tuyaos.c  lua_uart.c  lua_zbuff.c
lua_samples/base/: base.lua
lua_samples/file/: file.lua  file_read.lua  file_remove.lua  file_write.lua
lua_samples/gpio/: gpio_in.lua  gpio_intr.lua  gpio_out.lua  led_blink.lua
lua_samples/mqtt/: mqtt.lua
lua_samples/net/: net_connection.lua  net_tcp_server.lua  net_udp_client.lua  net_udp_server.lua  wifi_ap.lua  wifi_sta.lua
lua_samples/system/: system.lua  timer.lua
lua_samples/thread/: thread_file.lua  thread_function.lua  thread_function_once.lua  thread_string.lua
lua_samples/timer/: timer_callback.lua
lua_samples/uart/: uart.lua
lua_samples/utils/: utils.lua
main/: CMakeLists.txt  README.md  project_build.ini
main/src/: main.c  uart_handler.c  uart_handler.h
tools/nodemcu-uploader/nodemcu_uploader/: luacode.py  main.py  uploader.py  utils.py
